# MRI-Phantom-Segmentation

./: CMakeLists.txt  README.md
headers/: Dataset.h  Segmentation.h
output_folder/: IOU_scores.csv
source/: Dataset.cpp  Segmentation.cpp  main.cpp  score.py
